# numa

./: Cargo.toml  Dockerfile  NUMA_DEV_DNS.md  README.md  README.zh.md  dev-domains.txt  flake.nix  numa-dev-debug.bat  numa-dev-off.bat  numa-dev-on-hidden.bat  numa-dev-on.bat  numa.toml
.github/workflows/: ci.yml  docker.yml  publish-aur.yml  release.yml
blog/: numa-services-over-tailnet.md  numa-tailnet-resolver.md
recipes/: dnsdist-front.md
scripts/: numa-dev-debug.ps1  numa-dev-off.ps1  numa-dev-on.ps1  release.sh
site/: dashboard.html  index.html
src/: acl.rs  api.rs  blocklist.rs  buffer.rs  client_policy.rs  config.rs  ctx.rs  doh.rs  domain_list.rs  dot.rs  forward.rs  health.rs  lib.rs  odoh.rs  persist.rs  pp2.rs  pp2_udp.rs  proxy.rs  query_log.rs  rebind.rs  record.rs  relay.rs  serve.rs  service_store.rs  stats.rs  svcb.rs  system_dns.rs  tcp.rs  testutil.rs
tests/docker/: issue-281-repro.sh
